--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: auto;
   color: white;
 }
 
@@ -21,6 +20,11 @@
 
 .App-intro {
   font-size: large;
+}
+.main-banner {
+  background-image: url('./resources/pictures/raybanner.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .score-text {
   font-size: 1rem;
